--- a/css/swiper.css
+++ b/css/swiper.css
@@ -135,6 +135,12 @@ body {
   height: 565px;
 }
 
+@media (max-width: 590px) {
+  .swiper-wrapper {
+    height: unset;
+  }
+}
+
 .swiper-slide {
   background-color: unset;
   width: 400px;
@@ -154,6 +160,18 @@ body {
           flex-direction: column;
 }
 
+@media (max-width: 590px) {
+  .swiper-slide {
+    width: 320px;
+  }
+}
+
+@media (max-width: 468px) {
+  .swiper-slide {
+    width: 280px;
+  }
+}
+
 .swiper-slide .swiper-info-box {
   width: 100%;
   height: 150px;
@@ -171,6 +189,12 @@ body {
   -webkit-box-direction: normal;
       -ms-flex-direction: column;
           flex-direction: column;
+}
+
+@media (max-width: 590px) {
+  .swiper-slide .swiper-info-box {
+    height: unset;
+  }
 }
 
 .swiper-slide .swiper-info-box .info-title-box {
@@ -202,6 +226,12 @@ body {
   background-position: center;
 }
 
+@media (max-width: 590px) {
+  .swiper-slide .swiper-img {
+    height: 320px;
+  }
+}
+
 .swiper-slide .swiper-img .mask {
   width: 100%;
   height: 100%;
@@ -231,6 +261,14 @@ body {
           align-items: center;
 }
 
+@media (max-width: 590px) {
+  .next-prev-box {
+    width: 80px;
+    height: 30px;
+    margin-top: 40px;
+  }
+}
+
 .next-prev-box .swiper-button-next, .next-prev-box .swiper-button-prev {
   border-radius: 50%;
   border: 1px solid var(--maincolor, #394149);
@@ -239,6 +277,15 @@ body {
   position: static;
   -webkit-transition: .5s;
   transition: .5s;
+  -webkit-transform: translateY(40%);
+          transform: translateY(40%);
+}
+
+@media (max-width: 590px) {
+  .next-prev-box .swiper-button-next, .next-prev-box .swiper-button-prev {
+    width: 30px;
+    height: 30px;
+  }
 }
 
 .next-prev-box .swiper-button-next::after, .next-prev-box .swiper-button-prev::after {
@@ -250,6 +297,12 @@ body {
   color: var(--maincolor, #394149);
   -webkit-transition: .5s;
   transition: .5s;
+}
+
+@media (max-width: 590px) {
+  .next-prev-box .swiper-button-next i, .next-prev-box .swiper-button-prev i {
+    font-size: 20px;
+  }
 }
 
 .next-prev-box .swiper-button-next:hover, .next-prev-box .swiper-button-prev:hover {
