--- a/sass/index.scss
+++ b/sass/index.scss
@@ -11,6 +11,9 @@ html{
   @include small-pc{
     font-size: 15px;
   }
+  @include bkpt(590px){
+    font-size: 13px;
+  }
 }
 
 body{
@@ -126,6 +129,9 @@ main{
                 font-size: $h1;
                 font-weight: 700;
                 line-height: 60px;
+                @include bkpt(590px){
+                  font-size: $h2;
+                }
               }
               .ch-name{
                 font-size: $h2;
@@ -136,6 +142,9 @@ main{
             .introBottom{
               font-size: $h1;
               font-weight: 700;
+              @include bkpt(590px){
+                font-size: $h2;
+              }
             }
           }
   
@@ -214,6 +223,9 @@ main{
             padding: 50px 0 50px;
             margin-top: 50px;
           }
+          @include bkpt(590px){
+            width: 355px;
+          }
           p{
             
             font-size: $h6;
@@ -230,12 +242,25 @@ main{
     height: calc(100vh - 60px);
     min-height: 800px;
     @include flex(space-between,flex-start);
+    @include bkpt(590px){
+      height: 600px;
+      min-height: 600px;
+    }
     .title-area{
       padding-top: 50px;
       min-width: 140px;
       height: 100%;
       border-right:1px solid  var(--maincolor, $maincolor);
       margin-right: 100px;
+      @include bkpt(900px){
+        min-width: 70px;
+        margin-right: 50px;
+      }
+
+      @include bkpt(590px){
+        min-width: 50px;
+        margin-right: 25px;
+      }
 
       span{
         font-size: $h1;
@@ -245,6 +270,10 @@ main{
         -webkit-writing-mode: vertical-lr;
         writing-mode: vertical-lr ;
         transform: rotate(180deg);
+        @include bkpt(900px){
+          font-size: $h3;
+          line-height: $h3;
+        }
       }
     }
     
@@ -253,6 +282,9 @@ main{
       height: calc(100% - 50px);
       margin-top: 50px;
       overflow: hidden;
+      @include bkpt(590px){
+        max-height: 600px;
+      }
     }
   }
 
@@ -286,6 +318,7 @@ main{
           width: 100%;
           margin-right: unset;
           @include flex(flex-start,center);
+          min-height: unset;
         }
         .title-area{
           font-size: $h1;
@@ -295,13 +328,18 @@ main{
           line-height: 60px;
           @include bkpt(900px){
             flex: unset;
-            padding: 50px 0 ;
+            padding: 40px 0 ;
+            font-size: $h3;
+            line-height: $h3;
           }
         }
         .photo-area{
           width: 100%;
           height: 410px;
           background: black;
+          @include phone{
+            height: calc(410 * var(--p468));
+          }
         }
       }
 
@@ -310,10 +348,13 @@ main{
         min-height: 590px;
         @include flex(space-between,flex-start);
         flex-direction: column;
+        @include bkpt(900px){
+          min-height: unset;
+        }
         .personality-area{
           width: 100%;
           @include bkpt(900px){
-            padding: 25px 0 0;
+            padding: 20px 0 50px;
           }
           ul{
             list-style: none;
@@ -325,6 +366,9 @@ main{
               @include flex(flex-start,center);
               margin-bottom: 15px;
               padding-right: 15px;
+              @include phone{
+                width: 100%;
+              }
               .fa-solid{
                 color: var(--maincolor,$maincolor);
                 font-size: 15px;
@@ -339,6 +383,9 @@ main{
               &:nth-child(2n){
                 width: 45%;
                 padding-right: 0px;
+                @include phone{
+                  width: 100%;
+                }
               }
             }
 
