--- a/css/swiper.css
+++ b/css/swiper.css
@@ -172,6 +172,12 @@ body {
   }
 }
 
+@media (max-width: 420px) {
+  .swiper-slide {
+    width: 230px;
+  }
+}
+
 .swiper-slide .swiper-info-box {
   width: 100%;
   height: 150px;
