--- a/css/swiper.css
+++ b/css/swiper.css
@@ -135,7 +135,6 @@ body {
 .swiper-wrapper {
   height: 565px;
 }
-
 @media (max-width: 590px) {
   .swiper-wrapper {
     height: unset;
@@ -160,25 +159,21 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 @media (max-width: 590px) {
   .swiper-slide {
     width: 320px;
   }
 }
-
 @media (max-width: 468px) {
   .swiper-slide {
     width: 280px;
   }
 }
-
 @media (max-width: 420px) {
   .swiper-slide {
     width: 230px;
   }
 }
-
 .swiper-slide .swiper-info-box {
   width: 100%;
   height: 150px;
@@ -197,48 +192,40 @@ body {
       -ms-flex-direction: column;
           flex-direction: column;
 }
-
 @media (max-width: 590px) {
   .swiper-slide .swiper-info-box {
     height: unset;
   }
 }
-
 .swiper-slide .swiper-info-box .info-title-box {
   margin-bottom: 20px;
 }
-
 .swiper-slide .swiper-info-box .info-title-box .title {
   font-size: 1.6875rem;
   font-weight: 700;
   color: var(--maincolor, #394149);
 }
-
 .swiper-slide .swiper-info-box .info-title-box .category {
   font-size: 1rem;
   color: var(--fontcolor, #88929B);
   text-align: start;
 }
-
 .swiper-slide .swiper-info-box .info-content {
   font-size: 1rem;
   color: var(--fontcolor, #88929B);
   text-align: start;
 }
-
 .swiper-slide .swiper-img {
   width: 100%;
   height: 400px;
   background-size: cover;
   background-position: center;
 }
-
 @media (max-width: 590px) {
   .swiper-slide .swiper-img {
     height: 320px;
   }
 }
-
 .swiper-slide .swiper-img .mask {
   width: 100%;
   height: 100%;
@@ -246,7 +233,6 @@ body {
   -webkit-transition: 1s;
   transition: 1s;
 }
-
 .swiper-slide .swiper-img:hover .mask {
   background-color: var(--hovercolor, #ffffff);
   opacity: 0.5;
@@ -267,7 +253,6 @@ body {
       -ms-flex-align: center;
           align-items: center;
 }
-
 @media (max-width: 590px) {
   .next-prev-box {
     width: 80px;
@@ -275,48 +260,40 @@ body {
     margin-top: 40px;
   }
 }
-
 .next-prev-box .swiper-button-next, .next-prev-box .swiper-button-prev {
   border-radius: 50%;
   border: 1px solid var(--maincolor, #394149);
   width: 50px;
   height: 50px;
   position: static;
-  -webkit-transition: .5s;
-  transition: .5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
   -webkit-transform: translateY(40%);
           transform: translateY(40%);
 }
-
 @media (max-width: 590px) {
   .next-prev-box .swiper-button-next, .next-prev-box .swiper-button-prev {
     width: 30px;
     height: 30px;
   }
 }
-
 .next-prev-box .swiper-button-next::after, .next-prev-box .swiper-button-prev::after {
   content: unset;
 }
-
 .next-prev-box .swiper-button-next i, .next-prev-box .swiper-button-prev i {
   font-size: 25px;
   color: var(--maincolor, #394149);
-  -webkit-transition: .5s;
-  transition: .5s;
+  -webkit-transition: 0.5s;
+  transition: 0.5s;
 }
-
 @media (max-width: 590px) {
   .next-prev-box .swiper-button-next i, .next-prev-box .swiper-button-prev i {
     font-size: 20px;
   }
 }
-
 .next-prev-box .swiper-button-next:hover, .next-prev-box .swiper-button-prev:hover {
   background-color: var(--maincolor, #394149);
 }
-
 .next-prev-box .swiper-button-next:hover i, .next-prev-box .swiper-button-prev:hover i {
   color: var(--bgcolor, #eff1f3);
-}
-/*# sourceMappingURL=swiper.css.map */
+}/*# sourceMappingURL=swiper.css.map */
