--- a/sass/index.scss
+++ b/sass/index.scss
@@ -33,6 +33,9 @@ header{
   height: 60px;
   border-bottom: 1px solid var(--maincolor, $maincolor);
   @include flex(space-between,center);
+  @include bkpt(590px){
+    height: 50px;
+  }
 
   .logo-area{
     width: 140px;
@@ -43,6 +46,9 @@ header{
       font-size: 1.5rem;
       font-weight: 700;
       color:var(--maincolor, $maincolor);
+    }
+    @include bkpt(590px){
+      border-right:unset;
     }
   }
   nav{
@@ -55,6 +61,9 @@ header{
     height: 100%;
     border-left: 1px solid var(--maincolor, $maincolor);
     padding-left: 10px;
+    @include bkpt(590px){
+      border-left:unset;
+    }
     .fa-brands{
       font-size: 1.5rem;
       color: var(--maincolor, $maincolor);
@@ -72,10 +81,15 @@ main{
     margin: 0 25px;
     height: calc(100vh - 60px);
     border-bottom: 1px solid var(--maincolor, $maincolor);
+    min-height:750px;
     @include flex;
     flex-direction: column;
+    @include bkpt(1024px){
+      height:800px;
+      min-height:unset;
+    }
     @include bkpt(900px){
-      height:auto
+      height: auto;
     }
     .intro-top{
       width: 100%;
@@ -281,10 +295,14 @@ main{
     height: calc(100vh - 60px);
     min-height: 800px;
     @include flex(space-between,flex-start);
+    @include bkpt(1024px){
+      height: 800px;
+      min-height: unset;
+    }
     @include bkpt(590px){
       height: 650px;
-      min-height: 650px;
     }
+
     .title-area{
       padding-top: 50px;
       min-width: 140px;
@@ -332,9 +350,14 @@ main{
     height: calc(100vh - 60px);
     border-top: 1px solid var(--maincolor, $maincolor);
     border-bottom: 1px solid var(--maincolor, $maincolor);
+    min-height: 750px;
     @include flex;
+    @include bkpt(1024px){
+      height: 800px;
+      min-height: unset;
+    }    
     @include bkpt(900px){
-      height: unset;
+      height: auto;
     }
     .container{
       width: 1024px;
